--- a/dirt/index.html
+++ b/dirt/index.html
@@ -23,6 +23,11 @@
         <br/>
         <input type="submit" value="Adicionar">
     </form>
+    <br>
+    <br>
+    <div id="lista">
+        
+    </div>
 
     <script type="module" src="js/app.js"></script>
 </body>
