--- a/dirt/index.html
+++ b/dirt/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Eventos</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Adicionar Lista de Eventos</h1>
@@ -19,8 +20,6 @@
             Nome:
             <input type="text" id="nome">
         </label>
-        <br/>
-        <br/>
         <input type="submit" value="Adicionar">
     </form>
     <br>
