Adicionado mensagem apos adicionar evento

--- a/dirt/index.html
+++ b/dirt/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="mensagemAlert"></div>
+
     <h1>Adicionar Lista de Eventos</h1>
     <h2>Esta pequeno sistema foi criado usando TypeScript</h2>
 
